Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,7 @@ stages:
   - job: BuildJob
     steps:
     - task: Maven@3
+      displayName: Build Maven
       inputs:
         mavenPomFile: 'pom.xml'
         goals: 'test'
